# pyby

./: Cargo.toml  README.md  base_version.r  example.r  lib.rs_old  makefile  pyproject.toml  r_tests.r  r_version.r  r_version2.r  r_version3.r  specifications.md  test.py  testing.py  testing_between.py
.github/workflows/: CI.yml
src/: .lib.rs.rustfmt  helpers.rs  lib.rs  lib.rs_old  types.rs
src/bayes/: independent_d.rs  mod.rs  paired_d.rs
src/components/: components.rs  likelihoods.rs  mod.rs  predictive.rs  priors.rs
src/randomisers/: random.rs
src/stats/: algo.rs  mod.rs  summary.rs  teststats.rs
